2012-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi2xx.[ch]: Rename CopyFile -> my_CopyFile, ResetPrinter ->
	my_ResetPrinter, and PATTERN -> my_PATTERN to avoid a conflict
	with WIN32 headers (from W32TeX).

2011-05-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* doc/Makefile.am: Use ../am/bin_links.am for $(bindir) links.

2011-05-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (SUBDIRS): Add win32 to build C program dvihp
	from Akira's W32TeX as WIN32 replacements for the shell script.

2011-02-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [WIN32]: Add dvilj6.exe wrapper.

2011-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../am/man1_links.am for manpage links.

2010-12-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Ignore shell script for WIN32.

2010-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi2xx.c (mkdtemp): Declare as static.  [WIN32] Define mkdir
	as macro discarding the mode argument.
	* dvi2xx.h (max): #undef before redefinition.
	(ResetPrinter): #define as LJResetPrinter to avoid conflict.

2009-12-24  Karl Berry  <karl@tug.org>

	* AUTHORS, dviljk.pod, README, dvihp: doc/email fixes.

2009-08-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Cleanup: move extern declarations to header tfm.h.
	* dvi2xx.h (Fatal, NoSignExtend, tfm_read_info, Warning),
	tfm.c (TFMpath, Fatal, NoSignExtend, G_quiet, Warning),
	config.h (tfm_info_type): Removed.
	* tfm.h (tfm_info_type, TFMpath, G_quiet, Fatal, NoSignExtend,
	Warning): Declared here as extern.
	(tfm_read_info): Declared as extern.

	* dvi2xx.c (VisChar): Although unused, declare as static with
	ANSI C definition.

2009-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid many maximal compiler warnings.
	* dvi2xx.[ch], tfm.c: Constify string args of CopyFile(),
	Fatal(), IsSame(), Warning(), and check_checksum().
	* dvi2xx.[ch]: Constify various globals and avoid modifying them.